[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.22"
mockall = "0.13"
proptest = "1.5"
